# nova-physics-python

./: .gitignore  README.md  nova.pyi  pyproject.toml  setup.py
.github/workflows/: build-wheels.yaml  pypi-publish.yaml
examples/: README.md  _pygamebase.py  helloworld.py  pygame_bouncing.py  pygame_fixed_tickrate.py  pygame_pyramid.py
nova/: __init__.py  _cffi_gen.py  body.py  common.py  constraint.py  error.py  models.py  shape.py  space.py  typing.py  vector.py
src/: api.h  cffi_comp.py  cffi_gen.py  nova.c  nova.py  py_body.c  py_body.h  py_nova.c  py_space.c  py_space.h  py_vector2.c  py_vector2.h  utils.h
