[project]
name = "nova"
description = "Nova Physics Engine Python Binding"
version = "0.0.1"
readme = "README.md"
authors = [
    {name="Kadir Aksoy"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cffi >= 1.17.0",
]

[project.urls]
homepage = "https://github.com/kadir014/nova-physics-python"
bugtracker = "https://github.com/kadir014/nova-physics-python/issues"

[build-system]
requires = [
    "setuptools",
    "cffi >= 1.17.0",
]
build-backend = "setuptools.build_meta"