[project]
name = "nova"
description = "Nova Physics Engine Python Binding"
version = "0.2.0"
readme = "README.md"
authors = [
    {name="Kadir Aksoy"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cffi >= 1.17.0",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/kadir014/nova-physics-python"
bugtracker = "https://github.com/kadir014/nova-physics-python/issues"

[build-system]
requires = [
    "setuptools",
    "cffi >= 1.17.0",
]
build-backend = "setuptools.build_meta"
